fixed color for dark mode homepage

--- a/assets/sass/noesya-hugo/_style.sass
+++ b/assets/sass/noesya-hugo/_style.sass
@@ -247,6 +247,6 @@ footer#document-footer
                 color: transparentize(black, 0)
         nav li span
                 color: transparentize(black, .45)
-    .post-meta,
+    .post-meta time,
     .block-testimonials .signature + .meta
         color: $color-text-alt-dark
